# cockroach

./: '  --stress  .arcconfig  .bazel_fix_commands.json  .bazelignore  .bazelrc  .bazelrc.ci  .bazelversion  .codacy.yml  .cursorignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitreview  .go-version  .ibazelrc  .mcp.json  .node-version  .travis.yml  .uuid  .zshrc  1  123.txt  4uvdjigtnvvtvcoasscsfld4cf5cn6ou.darc  AGENTS.md  AUTHORS  AUTHORS.md  BUILD.bazel  BUILDING.md  CLAUDE.md  CLAUDE_CONTEXT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPS.bzl  DEVPLAN.md  Dockerfile  Dockerfile.old  EXTERNAL-CONTRIBUTORS-HALL-OF-FAME.md  (+148 more)
c-deps/: .gitignore  BUILD.bazel  REPOSITORIES.bzl  archived.bzl  autom4te  buildcdeps.sh  cryptopp-rebuild  geos-rebuild  googletest-rebuild  import.sh  jemalloc-rebuild  jemalloc.src.tar.xz  jemalloc.src.tgz  krb5-rebuild  libedit-rebuild  libroach-rebuild  proj-rebuild  proto-rebuild  protobuf-0001-Switch-to-gcc-atomic-intrinsics-for-macOS-and-delete.patch  protobuf-rebuild  protobuf.src.tar.xz  protobuf.src.tgz  rocksdb-0001-Fix-NDEBUG-windows.patch  rocksdb-0001-Fixup-a-couple-of-builds-errors-on-Linux.patch  rocksdb-0002-Version-librocksdb.so.patch  rocksdb-0003-Enable-Fast-CRC32-for-Win64.patch  rocksdb-0004-Fix-build-with-MinGW.patch  rocksdb-0005-CMake-support-AVX2-in-MinGW.patch  rocksdb-0006-replace-sometimes-undefined-uint-type-with-unsigned-.patch  rocksdb-0006-replace-sometimes-undefined-uint-type-with-unsigned-int.patch  rocksdb-0007-CMake-more-MinGW-fixes.patch  rocksdb-0008-Downcase-includes-for-case-sensitive-filesystems-Min.patch  rocksdb-0009-abort.patch  rocksdb-0010-gettimeofday.patch  rocksdb-0010-jemalloc-workaround.patch  rocksdb-0011-librocksdb-all-platforms.patch  rocksdb-0012-no-odirect-openbsd.patch  rocksdb-0013-cmake-msse.patch  rocksdb-0014-cmake-o2.patch  rocksdb-0015-arena-derive-alignment-unit-from-std-max_align_t.patch  (+11 more)
c-deps/libroach/: .clang-format  CMakeLists.txt  README.md  batch.cc  batch.h  cache.cc  cache.h  chunked_buffer.cc  chunked_buffer.h  chunked_buffer_test.cc  clang.format  comparator.cc  comparator.h  comparator_test.cc  cppgo.h  crc32.c  crc32.h  crc32_amd64.S  crc32_bench.c  crc32_test.c  db.cc  db.h  db.hpp  db_test.cc  dbhelper.cc  dbhelper.h  defines.h  encoding.cc  encoding.h  encoding_test.cc  encryption.cc  encryption.h  engine.cc  engine.h  env_manager.h  env_switching.cc  env_switching.h  eventlistener.cc  eventlistener.h  file_registry.cc  (+48 more)
pkg/acceptance/: .gitignore  BUILD.bazel  adapter_test.go  admin_test.go  allocator_test.go  build_info_test.go  c_test.go  chaos_test.go  cli_test.go  compose_test.go  continuous_load_test.go  csharp_test.go  debug_remote_test.go  decommission_test.go  dynamic_client.go  event_log_test.go  finagle_test.go  flags.go  freeze_test.go  generated_cli_test.go  gossip_peerings_test.go  init_test.go  java_test.go  load.go  main_stub_test.go  main_test.go  mixed_version_test.go  monotonic_insert_test.go  namesgenerator.go  node_test.go  partition.go  partition_test.go  php_test.go  prepare.sh  psql_test.go  put_test.go  python_test.go  rapid_restart_test.go  reference_test.go  repair_test.go  (+18 more)
pkg/backup/: BUILD.bazel  README.md  alter_backup_planning.go  alter_backup_schedule.go  alter_backup_schedule_test.go  alter_backup_test.go  backup.md  backup_cloud_test.go  backup_compaction.go  backup_compaction_policy.go  backup_compaction_policy_test.go  backup_compaction_test.go  backup_intents_test.go  backup_job.go  backup_metrics.go  backup_planning.go  backup_planning_tenant.go  backup_planning_test.go  backup_processor.go  backup_processor_planning.go  backup_span_coverage.go  backup_telemetry.go  backup_tenant_test.go  backup_test.go  bench_covering_test.go  bench_test.go  compaction.go  compaction_dist.go  compaction_dist_test.go  compaction_job.go  compaction_policy.go  compaction_policy_test.go  compaction_processor.go  compaction_processor_planning.go  compaction_processor_planning_test.go  compaction_test.go  create_scheduled_backup.go  create_scheduled_backup_test.go  data_driven_generated_test.go  datadriven_test.go  (+56 more)
pkg/backupcompaction/: BUILD.bazel  api.go
pkg/base/: BUILD.bazel  addr_validation.go  addr_validation_test.go  assert_utils_no_race.go  assert_utils_race.go  cluster_id.go  cluster_id_test.go  cluster_version.go  cluster_version.pb.go  cluster_version.proto  config.go  config_test.go  constants.go  docs.go  join_list.go  join_list_test.go  license.go  main_test.go  mem_stats.go  node_id.go  node_id_test.go  security_flags.go  security_flags_test.go  size_spec.go  store_spec.go  store_spec_test.go  temp_storage.go  temp_storage_config.go  test_cluster_replication_mode.go  test_server_args.go  test_server_args_test.go  testclusterreplicationmode_string.go  testing_knobs.go  zone.go
pkg/bench/: BUILD.bazel  bench_test.go  foreachdb.go  main_test.go  pgbench_test.go  query.go  setup.go
pkg/blobs/: BUILD.bazel  bench_test.go  client.go  client_test.go  local_storage.go  local_storage_test.go  service.go  service_test.go  stream.go  testutils.go  utils.go
pkg/ccl/: BUILD.bazel  LICENSE  README.md  ccl_init.go
pkg/cli/: BUILD.bazel  README.md  absolute_fs.go  addjoin.go  addjoin_test.go  auth.go  auto_decrypt_fs.go  auto_decrypt_fs_test.go  backtrace.go  backtrace_unsupported.go  backup.go  bench.go  binding.go  cert.go  cert_test.go  cli.go  cli_debug_test.go  cli_linux.go  cli_mt.go  cli_mt_start_sql.go  cli_test.go  client_url.go  cockroachdb_datadog_dashboard.json  connect.go  connect_join.go  connect_join_test.go  context.go  convert_url.go  convert_url_test.go  cpuprofile.go  dashboard.go  debug.go  debug_agent_instructions.md  debug_check_store.go  debug_check_store_test.go  debug_ear.go  debug_extract_range.go  debug_fips.go  debug_job_cleanup.go  debug_job_trace.go  (+172 more)
pkg/cloud/: BUILD.bazel  accounting_sink.go  cloud_io.go  cloud_io_test.go  cloud_logging_transport.go  cloud_logging_transport_test.go  external_storage.go  flush_writer.go  impl_registry.go  kms.go  kms_test_utils.go  metrics.go  options.go  (+4 more)
(+41761 files in other folders)
